[gd_scene load_steps=11 format=3 uid="uid://cynexbpvvg7vt"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_f6fhf"]
[ext_resource type="Texture2D" uid="uid://bj3wft6gikvfh" path="res://Player/dfklnyb-8779807f-9098-409c-b63c-ad76d28e62b5.png" id="2_2723s"]
[ext_resource type="Script" path="res://Common/StateMachine/StateMachine.gd" id="2_tvsun"]
[ext_resource type="Texture2D" uid="uid://38o33mgga74y" path="res://Player/Crosshair.png" id="3_rteal"]
[ext_resource type="Script" path="res://Player/Idle.gd" id="3_rvt72"]
[ext_resource type="Script" path="res://Player/crosshair.gd" id="4_5bptn"]
[ext_resource type="Script" path="res://Player/Running.gd" id="4_8qiql"]
[ext_resource type="Script" path="res://Player/Jumping.gd" id="5_01ecb"]
[ext_resource type="AudioStream" uid="uid://61ienfstkdxj" path="res://Audio/Sound_Effects/Gunshot Style C.mp3" id="7_xb5wg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_raoxj"]
size = Vector2(68, 159)

[node name="Player" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_f6fhf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.500003, -6.17933)
scale = Vector2(0.136552, 0.136552)
texture = ExtResource("2_2723s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_raoxj")

[node name="Crosshair" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_rteal")
script = ExtResource("4_5bptn")

[node name="GunCooldownTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("2_tvsun")
CURRENT_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("3_rvt72")

[node name="Running" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_8qiql")

[node name="Jumping" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_01ecb")

[node name="GunshotStyleC" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_xb5wg")
volume_db = -80.0

[connection signal="timeout" from="GunCooldownTimer" to="." method="_on_gun_cooldown_timer_timeout"]
